INIT: Created project and library (PS: Gotta set up proper commit conventions)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "tron-ui": [
+        "dist/tron-ui/tron-ui",
+        "dist/tron-ui"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
