--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",    
+    "@angular/router": "~12.2.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "rxjs": "~6.6.0",
+    "tailwindcss": "^2.2.19",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -35,6 +38,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^12.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.3.5"
   }
 }
